; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_energy_perf.c_gpu_fceiling_cb_register.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_energy_perf.c_gpu_fceiling_cb_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gpu_set_fceiling_cb = common dso_local global i32* null, align 8
@gpu_set_fceiling_cb_default = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gpu_fceiling_cb_register(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  store i32* %6, i32** @gpu_set_fceiling_cb, align 8
  br label %9

7:                                                ; preds = %1
  %8 = load i32*, i32** @gpu_set_fceiling_cb_default, align 8
  store i32* %8, i32** @gpu_set_fceiling_cb, align 8
  br label %9

9:                                                ; preds = %7, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
